# TRI-LBM

./: README.md  pyproject.toml
TRI_LBM/: lbm.py
tests/: test_lbm.py
